crates/gpui-form-macros/tests/ui/fail/invalid_custom_i18n.rs
use gpui_form_macros::FormStore;

#[derive(FormStore)]
#[form(validation(adapter = AppValidator, i18n = AppI18nProvider))]
struct Example {
    value: String,
}

fn main() {}
